--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -4333,7 +4333,7 @@
         "\n",
         "We firstly tried with BERT with many experiments in order to see how we could avoid the overfitting and reach more stability but with very low results. Then we move on to variation from the the lighter one (DistillBERT) to heaviers (DEeBERTa and RoBERTa) with different approaches registering more stability.\n",
         "\n",
-        "Finally we obtain the best result in term of the trade off stability/metrics with the **All-mpnet-base-v2** encoder,despite the fact that its use is most devoted to task of semantic similarity/clustering, we expolited its ability of a deeper understanding on the semantic of the sentence for our further classification purposes."
+        "Finally we obtain the best result in term of the trade off stability/metrics with the **All-mpnet-base-v2** encoder,despite the fact that its use is most devoted to task of semantic similarity/clustering, we exploited its ability of a deeper understanding on the semantic of the sentence for our further classification purposes."
       ],
       "metadata": {
         "id": "QqmSfZgVRobi"
