--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -5333,7 +5333,7 @@
       "source": [
         "The final model used is the encoder **all_mpnet_base_v2** with a classification head that is the result of a mixing strategy of two stable approaches: mean pooling classification and max pooling classification.\n",
         "\n",
-        "Given the good results obtained in the trials with this encoder with the **mean pool** and the **max pool** approach, we decided to **combine** them in a weighted sum described by:\n",
+        "Given the good results obtained in the trials with this encoder with the **mean pool** and the **max pool** approaches, we decided to **combine** them in a weighted sum described by:\n",
         "\n",
         "    pooled = alpha * mean_pooled + (1 - alpha) * max_pooled\n",
         "\n",
@@ -6564,7 +6564,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now we pick up the best model in terms of stability/metric results and we apply the enhancement of the text with the first 3 sentences of the summary.\n",
+        "Her we picked up the best model in terms of stability/metric results and we applied the enhancement of the text with the first 3 sentences of the summary.\n",
         "\n",
         "The results are quiet similar to the previous one but with a slightly less accuracy (78,33%)."
       ],
