--- a/Wiki-Graph_original copy.ipynb
+++ b/Wiki-Graph_original copy.ipynb
@@ -2304,7 +2304,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### 2.2: NODE2VEC"
+        "#### 2.2: LAPLACIAN"
       ],
       "metadata": {
         "id": "N-W3dIZjuRPK"
@@ -2426,11 +2426,11 @@
         "print(graph_data)\n"
       ],
       "metadata": {
-        "id": "idiu5LfpuWrN",
-        "outputId": "0256fe4b-d6cb-4e3b-d018-1a800a701fa3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "idiu5LfpuWrN",
+        "outputId": "0256fe4b-d6cb-4e3b-d018-1a800a701fa3"
       },
       "execution_count": null,
       "outputs": [
