--- a/Wiki-Graph_original.ipynb
+++ b/Wiki-Graph_original.ipynb
@@ -248,6 +248,7 @@
         "import random\n",
         "import itertools\n",
         "import networkx as nx\n",
+        "from matplotlib.patches import Patch\n",
         "from torch_geometric.utils import from_networkx\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
