--- a/Wiki-Graph_original_anchor.ipynb
+++ b/Wiki-Graph_original_anchor.ipynb
@@ -2612,7 +2612,7 @@
         "id": "RbpKYonilRgY",
         "outputId": "1b473a7d-ba14-442f-d95a-497e3c043411"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -2620,7 +2620,14 @@
           "text": [
             "[Epoch 010] Train Loss: 0.8702  Val Loss:   0.8223  Val Acc:    0.6333  Prec:       0.6180  Rec:        0.6205  F1:         0.6188  PPL:        2.28\n",
             "[Epoch 020] Train Loss: 0.6561  Val Loss:   0.8126  Val Acc:    0.6400  Prec:       0.6179  Rec:        0.6216  F1:         0.6185  PPL:        2.25\n",
-            "[Epoch 030] Train Loss: 0.5503  Val Loss:   0.8255  Val Acc:    0.6267  Prec:       0.6012  Rec:        0.6041  F1:         0.6011  PPL:        2.28\n"
+            "[Epoch 030] Train Loss: 0.5503  Val Loss:   0.8255  Val Acc:    0.6267  Prec:       0.6012  Rec:        0.6041  F1:         0.6011  PPL:        2.28\n",
+            "[Epoch 040] Train Loss: 0.4720  Val Loss:   0.8640  Val Acc:    0.6333  Prec:       0.6081  Rec:        0.6116  F1:         0.6086  PPL:        2.37\n",
+            "[Epoch 050] Train Loss: 0.4139  Val Loss:   0.9309  Val Acc:    0.6333  Prec:       0.6119  Rec:        0.6149  F1:         0.6125  PPL:        2.54\n",
+            "[Epoch 060] Train Loss: 0.3713  Val Loss:   0.9766  Val Acc:    0.6267  Prec:       0.6041  Rec:        0.6074  F1:         0.6050  PPL:        2.66\n",
+            "Early stopping at epoch 65\n",
+            "\n",
+            "Best Val Loss: 0.8089\n",
+            "Final Val Acc: 0.6400, Prec: 0.6193, Rec: 0.6224, F1: 0.6201, PPL: 2.25\n"
           ]
         }
       ]
