Results for enhanced, MPNet+Tplt, epochs=5

--- a/Wiki-Graph_enhanced.ipynb
+++ b/Wiki-Graph_enhanced.ipynb
@@ -3481,11 +3481,11 @@
         "#!huggingface-cli login\n"
       ],
       "metadata": {
-        "id": "zx06biBQGiPF",
-        "outputId": "5f67da08-7383-46e3-e48e-8b7b94fefb46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zx06biBQGiPF",
+        "outputId": "5f67da08-7383-46e3-e48e-8b7b94fefb46"
       },
       "execution_count": 52,
       "outputs": [
@@ -6945,11 +6945,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
-        "id": "k2-edzGpE77q"
+        "id": "k2-edzGpE77q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ae82862-2b89-45fb-fc03-153a53870e80"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Epoch 010] Train Loss: 0.2914  Val Loss:   0.2350  Val Acc:    0.9433  Prec:       0.9447  Rec:        0.9349  F1:         0.9388  PPL:        1.26\n",
+            "[Epoch 020] Train Loss: 0.1676  Val Loss:   0.2159  Val Acc:    0.9433  Prec:       0.9447  Rec:        0.9349  F1:         0.9388  PPL:        1.24\n",
+            "[Epoch 030] Train Loss: 0.1272  Val Loss:   0.2164  Val Acc:    0.9467  Prec:       0.9455  Rec:        0.9390  F1:         0.9418  PPL:        1.24\n",
+            "[Epoch 040] Train Loss: 0.1132  Val Loss:   0.2208  Val Acc:    0.9433  Prec:       0.9425  Rec:        0.9359  F1:         0.9388  PPL:        1.25\n",
+            "[Epoch 050] Train Loss: 0.1068  Val Loss:   0.2243  Val Acc:    0.9467  Prec:       0.9455  Rec:        0.9390  F1:         0.9418  PPL:        1.25\n",
+            "[Epoch 060] Train Loss: 0.1009  Val Loss:   0.2236  Val Acc:    0.9467  Prec:       0.9455  Rec:        0.9390  F1:         0.9418  PPL:        1.25\n",
+            "[Epoch 070] Train Loss: 0.0995  Val Loss:   0.2225  Val Acc:    0.9467  Prec:       0.9455  Rec:        0.9390  F1:         0.9418  PPL:        1.25\n",
+            "Early stopping at epoch 73\n",
+            "\n",
+            "Best Val Loss: 0.2150\n",
+            "Final Val Acc: 0.9467, Prec: 0.9455, Rec: 0.9390, F1: 0.9418, PPL: 1.24\n"
+          ]
+        }
+      ],
       "source": [
         "# 1) Instantiate the Model\n",
         "sheaf_model = SheafCN(\n",
