--- a/Wiki-Graph_enhanced copy.ipynb
+++ b/Wiki-Graph_enhanced copy.ipynb
@@ -3511,11 +3511,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 37,
       "metadata": {
-        "id": "qOKei5jSEtnl"
+        "id": "qOKei5jSEtnl",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "5a8dca62-42d4-4948-a9a0-81cf4e6f2cc7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'sheaf_model' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-37-977879525494>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Delete also any model used before.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0msheaf_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'sheaf_model' is not defined"
+          ]
+        }
+      ],
       "source": [
         "import torch, gc\n",
         "\n",
@@ -3529,7 +3546,7 @@
         "clear_gpu_memory()\n",
         "\n",
         "# Delete also any model used before.\n",
-        "del GIN_model"
+        "#del sheaf_model"
       ]
     },
     {
@@ -4721,31 +4738,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "k2-edzGpE77q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f44ed43-7666-472f-b260-c29dcb27e76f"
+        "outputId": "f5f8bce2-4113-4c6c-a138-3744fc96cd12"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[Epoch 010] Train Loss: 0.3266  Val Loss:   0.1913  Val Acc:    0.9600  Prec:       0.9634  Rec:        0.9545  F1:         0.9580  PPL:        1.21\n",
-            "[Epoch 020] Train Loss: 0.1728  Val Loss:   0.1522  Val Acc:    0.9600  Prec:       0.9634  Rec:        0.9545  F1:         0.9580  PPL:        1.16\n",
-            "[Epoch 030] Train Loss: 0.1171  Val Loss:   0.1429  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.15\n",
-            "[Epoch 040] Train Loss: 0.0932  Val Loss:   0.1438  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.15\n",
-            "[Epoch 050] Train Loss: 0.0844  Val Loss:   0.1467  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
-            "[Epoch 060] Train Loss: 0.0808  Val Loss:   0.1475  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
-            "[Epoch 070] Train Loss: 0.0757  Val Loss:   0.1488  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
-            "[Epoch 080] Train Loss: 0.0750  Val Loss:   0.1497  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
-            "Early stopping at epoch 82\n",
-            "\n",
-            "Best Val Loss: 0.1426\n",
-            "Final Val Acc: 0.9633, Prec: 0.9660, Rec: 0.9574, F1: 0.9609, PPL: 1.15\n"
+            "[Epoch 010] Train Loss: 0.2937  Val Loss:   0.1923  Val Acc:    0.9567  Prec:       0.9607  Rec:        0.9517  F1:         0.9551  PPL:        1.21\n",
+            "[Epoch 020] Train Loss: 0.1535  Val Loss:   0.1609  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.17\n",
+            "[Epoch 030] Train Loss: 0.1107  Val Loss:   0.1568  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.17\n",
+            "[Epoch 040] Train Loss: 0.0918  Val Loss:   0.1574  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.17\n"
           ]
         }
       ],
@@ -4756,7 +4765,7 @@
         "    hid_dim    = 64,\n",
         "    out_dim    = contrastive_learning_data.y.max().item()+1,\n",
         "    edge_index = contrastive_learning_data.edge_index,\n",
-        "    map_dim    = 16,\n",
+        "    map_dim    = 32,\n",
         "    dropout    = 0.5,\n",
         "    step_size  = 0.5,       # try 0.1,0.2,…\n",
         ").to(device)\n",
