--- a/Wiki-Graph_original.ipynb
+++ b/Wiki-Graph_original.ipynb
@@ -2462,7 +2462,7 @@
         "        # The sheaf_learner predicts restriction maps for each edge.\n",
         "        # The input is the concatenated features of u and v (size 2*out_dim).\n",
         "        # The output is map_dim, that is used to build the sheaf laplacian.\n",
-        "        self.sheaf_learner = Linear(2*out_dim, map_dim, bias=False)\n",
+        "        self.sheaf_learner = Linear(2*out_dim, map_dim, bias=False)         # This is the \"General\" Sheaf Learner.\n",
         "        # Buffers to store reverse-edge indices for Laplacian building.\n",
         "        self.register_buffer('left_idx',  None)\n",
         "        self.register_buffer('right_idx', None)\n",
