--- a/Wiki-Graph_enhanced.ipynb
+++ b/Wiki-Graph_enhanced.ipynb
@@ -2457,7 +2457,7 @@
         "        # Let's then concatenate source and target nodes' features and pass through the sheaf_learner.\n",
         "        r  = self.sheaf_learner(torch.cat([hu, hv], dim=1))  # [E, map_dim]\n",
         "        # Let's bound the maps in [-1, 1].\n",
-        "        return torch.tanh(r)\n",
+        "        return torch.tanh(r)    # Tanh is just to keep your learned O(d)–bundle parameters in a nice, stable range ‒ it has nothing to do with the feature‐update nonlinearity.\n",
         "\n",
         "    def build_laplacian(self, maps, N):\n",
         "        \"\"\"\n",
@@ -2524,6 +2524,8 @@
         "      - Learnable restriction maps per layer.\n",
         "      - Layer-wise residual connections.\n",
         "      - GraphNorm, ReLU activation, and Dropout.\n",
+        "    \n",
+        "    The step_size parameter is simply the “Δt” in your discretized diffusion update.\n",
         "    \"\"\"\n",
         "    def __init__(self, in_dim, hid_dim, out_dim, edge_index,\n",
         "                 map_dim=16, dropout=0.5, step_size=1.0):\n",
@@ -2602,7 +2604,7 @@
         "    edge_index = data.edge_index,\n",
         "    map_dim    = 16,\n",
         "    dropout    = 0.5,\n",
-        "    step_size  = 0.5,\n",
+        "    step_size  = 0.5,   # It’s simply the “Δt” in your discretized diffusion update.\n",
         ").to(device)\n",
         "\n",
         "# 2) Training the model.\n",
