--- a/Wiki-Graph.ipynb
+++ b/Wiki-Graph.ipynb
@@ -8,11 +8,21 @@
       "source": [
         "# WIKI-SHEAF (GRAPH SOLUTION - ENHNANCED VERSION)\n",
         "\n",
-        "***REAF CAREFULLY***\n",
+        "***HOW TO: REAF CAREFULLY***\n",
         "\n",
         "The notebook is structured in the following way:\n",
-        "- **1 - EXPERIMENTAL & JOURNEY TOWARDS THE FINAL SOLUTION:**  \n",
-        "- **2 - FINAL SOLUTION (TO-RUN):** This contains only the final selected solution, to run if we want to\n",
+        "- **1 - EXPERIMENTAL & JOURNEY TOWARDS THE FINAL SOLUTION:**  This big section contains the (enhanced) version of the dataset, and all the full experiments and comparisons we have been gone through.\n",
+        "  - **HOW TO USE IT:** This should not be runned (unless you want to test the whole experimental journey).\n",
+        "- **2 - FINAL SOLUTION (TO-RUN):** This contains two subsections:\n",
+        "  - **DATASET ENHANCEMENT+TRAINING+TESTING**: This contains the whole development settings (dataset enhancement, Graph Construction, MPNetv2 fine-tuning, SheafNN training).\n",
+        "  - **TESTING**: This contains the development settings taking both the Dataset Enhancement process, the MPNet fine-tuning and the SheafNN training. It consist in just running the whole in a testing setting, with all the model already done.\n",
+        "   only the final selected solution, to run if we want to\n",
+        "\n",
+        "**TO NOTE**\n",
+        "- In the final version we decided to select and use for the (non-LLM section). Notice that, the big architecture emlpoys a step (the MPNET fine-tuning, that could be seen as LLM). We have already discussed with professor R.Navigli and he allowed us to use this version since this part is only a small part in the overall architecture (it is only used to build node embeddings, the real core of the proposed architecture must be focused on the Graph Construction and SheafNNs resolution.)\n",
+        "\n",
+        "**FINAL ARCHITECTURE PROPOSED**\n",
+        "\n",
         "\n",
         "**CONTACTS**\n",
         "\n",
