Prediction Wiki-Graph

--- a/Wiki-Graph.ipynb
+++ b/Wiki-Graph.ipynb
@@ -5053,7 +5053,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 625
         },
         "outputId": "dbee7b2c-3d0f-4e33-943b-9f2832c9b4e1",
         "id": "DcCeiSpSgxzW"
@@ -5462,7 +5462,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 556
         },
         "outputId": "f822f06c-1e80-44a7-d836-660030983347",
         "id": "1MPyNHvDgxzX"
@@ -5873,11 +5873,11 @@
       ],
       "metadata": {
         "id": "heIO0Sk0suUE",
-        "outputId": "13944d4e-e897-4602-b8a0-323c59ded674",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
-        }
+          "height": 573
+        },
+        "outputId": "13944d4e-e897-4602-b8a0-323c59ded674"
       },
       "execution_count": 7,
       "outputs": [
@@ -6788,7 +6788,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 881
         },
         "outputId": "eb6b4b7e-5343-4f22-8c9e-837db6cadf70",
         "id": "CDmOS-HnEJLU"
@@ -6868,7 +6868,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 885
         },
         "outputId": "9eb7c797-db1f-4335-bed8-55d65772879e",
         "id": "02kPHZtJEJLU"
@@ -7576,12 +7576,12 @@
       ],
       "metadata": {
         "id": "r-9-R8PBoCwl",
-        "outputId": "b08e59ea-a3cc-4de9-ee92-47da68f6eb21",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b08e59ea-a3cc-4de9-ee92-47da68f6eb21"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -7598,7 +7598,14 @@
             "[Epoch 010] Train Loss: 0.2837  Val Loss:   0.1794  Val Acc:    0.9600  Prec:       0.9630  Rec:        0.9543  F1:         0.9579  PPL:        1.20\n",
             "[Epoch 020] Train Loss: 0.1578  Val Loss:   0.1495  Val Acc:    0.9600  Prec:       0.9630  Rec:        0.9543  F1:         0.9579  PPL:        1.16\n",
             "[Epoch 030] Train Loss: 0.1119  Val Loss:   0.1440  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.15\n",
-            "[Epoch 040] Train Loss: 0.0941  Val Loss:   0.1471  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n"
+            "[Epoch 040] Train Loss: 0.0941  Val Loss:   0.1471  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
+            "[Epoch 050] Train Loss: 0.0801  Val Loss:   0.1513  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.16\n",
+            "[Epoch 060] Train Loss: 0.0775  Val Loss:   0.1530  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.17\n",
+            "[Epoch 070] Train Loss: 0.0755  Val Loss:   0.1538  Val Acc:    0.9633  Prec:       0.9660  Rec:        0.9574  F1:         0.9609  PPL:        1.17\n",
+            "Early stopping at epoch 79\n",
+            "\n",
+            "Best Val Loss: 0.1441\n",
+            "Final Val Acc: 0.9633, Prec: 0.9660, Rec: 0.9574, F1: 0.9609, PPL: 1.15\n"
           ]
         }
       ]
@@ -7609,10 +7616,10 @@
         "# Testing the model saved.\n",
         "# Re-create the exact same model architecture\n",
         "sheaf_model = SheafCN(\n",
-        "    in_dim     = contrastive_learning_data.x.size(1),\n",
+        "    in_dim     = data.x.size(1),\n",
         "    hid_dim    = 64,\n",
-        "    out_dim    = contrastive_learning_data.y.max().item()+1,\n",
-        "    edge_index = contrastive_learning_data.edge_index,\n",
+        "    out_dim    = data.y.max().item()+1,\n",
+        "    edge_index = data.edge_index,\n",
         "    map_dim    = 16,\n",
         "    dropout    = 0.5,\n",
         "    step_size  = 0.5,\n",
@@ -7626,13 +7633,78 @@
         "sheaf_model.load_state_dict(ckpt['model_state_dict'])\n",
         "#optimizer.load_state_dict(ckpt['optimizer_state_dict'])  # optional\n",
         "best_val_loss = ckpt['best_val_loss']\n",
-        "sheaf_model.eval()  # or .train() depending on what you want next\n"
+        "sheaf_model.eval()  # or .train() depending on what you want next\n",
+        "metrics = evaluate_model(sheaf_model, data, best_state, best_val_loss)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "fsGmIh20llg6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fsGmIh20llg6",
+        "outputId": "c310de98-2bfe-42cd-bf61-38e1694169a5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Best Val Loss: 0.1441\n",
+            "Final Val Acc: 0.9633, Prec: 0.9660, Rec: 0.9574, F1: 0.9609, PPL: 1.15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import torch\n",
+        "\n",
+        "# 1) Put the model in eval mode and do one forward pass over train/val edges only\n",
+        "sheaf_model.eval()\n",
+        "mask = data.train_mask | data.val_mask\n",
+        "with torch.no_grad():\n",
+        "    logits     = sheaf_model(data.x, data.edge_index, node_mask=mask)\n",
+        "    test_logits = logits[data.test_mask]             # [#test_nodes, num_classes]\n",
+        "    test_preds  = test_logits.argmax(dim=1).cpu().numpy()  # numpy array [#test_nodes]\n",
+        "\n",
+        "# 2) Load your test CSV (already aligned 1:1 to `data.test_mask`)\n",
+        "csv_path = '/content/drive/MyDrive/BorgiPreviti/test_enhanced.csv'\n",
+        "df = pd.read_csv(csv_path)\n",
+        "\n",
+        "# 3) Sanity‐check that row‐count matches number of test‐nodes\n",
+        "num_test = data.test_mask.sum().item()\n",
+        "assert len(df) == num_test, \\\n",
+        "    f\"CSV has {len(df)} rows but graph has {num_test} test‐nodes!\"\n",
+        "\n",
+        "# 4) Inject the predictions directly (row i → test_preds[i])\n",
+        "df['label'] = test_preds\n",
+        "\n",
+        "# 5) Save out the augmented CSV\n",
+        "out_path = '/content/drive/MyDrive/BorgiPreviti/BorgiPreviti_output_Wiki-Graph_model.csv'\n",
+        "df.to_csv(out_path, index=False)\n",
+        "print(f\"Wrote {len(df)} rows with new ‘label’ column to {out_path}\")\n"
+      ],
+      "metadata": {
+        "id": "Lr__jvQgHAOQ",
+        "outputId": "42789b54-45da-494c-9153-239fd7d004e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Wrote 300 rows with new ‘label’ column to /content/drive/MyDrive/BorgiPreviti/BorgiPreviti_output_Wiki-Graph_model.csv\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
