--- a/Fine_Tuned_Transformer.ipynb
+++ b/Fine_Tuned_Transformer.ipynb
@@ -505,8 +505,12 @@
         "id": "JzVeeYDCjjkx"
       },
       "source": [
-        "### 1.0.5: TRAINING SET LOADING, INSPECTION & DISCOVERY\n",
-        "\n",
+        "### 1.0.5: TRAINING SET LOADING, INSPECTION & DISCOVERY"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "We make some exploration from the dataset. In the first version of the data provided, we noticed the following \"issues\". The first and second problems have been solved with the introduction of the new dataset version, while the third and fourth (actually not being problems, but dataset features), still persist.\n",
         "\n",
         "**NaN LABEL PRESENCE**\n",
@@ -531,9 +535,11 @@
         "\n",
         "**NAME DUPLICATES**\n",
         "\n",
-        "We also notice that the dataset contains duplicates in the \"name\" column, meaning that there are some words that have a different meaning depending on the context. Since these are very few, we decide to mantain them and not to delete them (also because would be wrong to do this).\n",
-        "\n"
-      ]
+        "We also notice that the dataset contains duplicates in the \"name\" column, meaning that there are some words that have a different meaning depending on the context. Since these are very few, we decide to mantain them and not to delete them (also because would be wrong to do this)."
+      ],
+      "metadata": {
+        "id": "uAaYhpxz3bZW"
+      }
     },
     {
       "cell_type": "markdown",
